Fix Publication Page

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,16 +1,20 @@
 ---
-layout: splash
+layout: bibbase_splash
 permalink: /publications/
 title: "Publications"
 author_profile: false
 classes: wide
+
+bibbase_theme: dividers # default dividers side simple bullets
+bibbase_fullnames: 1 # If present, author and editor names will not be abbreviated. 
+bibbase_owner: Costanzo
 ---
 
 <div>
 <article>
     <h1>Journals</h1>
     <div>
-        <script src="https://bibbase.org/show?bib=http%3A%2F%2Fmarcocostanzo.github.io%2Fbibliography%2Fjourn.bib&jsonp=1"></script> 
+        <script src="https://bibbase.org/show?bib=http%3A%2F%2Fmarcocostanzo.github.io%2Fbibliography%2Fjourn.bib&jsonp=1&theme={{page.bibbase_theme}}&fullnames={{page.bibbase_fullnames}}&owner={{page.bibbase_owner}}"></script> 
     </div>
 </article>
 
@@ -19,7 +23,7 @@ classes: wide
 <article>
     <h1>Conferences</h1>
     <div>
-        <script src="https://bibbase.org/show?bib=http%3A%2F%2Fmarcocostanzo.github.io%2Fbibliography%2Fconf.bib&jsonp=1"></script> 
+        <script src="https://bibbase.org/show?bib=http%3A%2F%2Fmarcocostanzo.github.io%2Fbibliography%2Fconf.bib&jsonp=1&theme={{page.bibbase_theme}}&fullnames={{page.bibbase_fullnames}}&owner={{page.bibbase_owner}}"></script> 
     </div>
 </article>
 </div>
