--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,16 +5,22 @@ title: "Publications"
 author_profile: false
 classes: wide
 
-bibbase_theme: dividers # default dividers side simple bullets
-bibbase_fullnames: 1 # If present, author and editor names will not be abbreviated. 
-bibbase_owner: Costanzo
+# theme: default dividers side simple bullets
+# fullnames: 1 #If present, author and editor names will not be abbreviated. 
+bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year&group0=year&group1=type'
 ---
 
 <div>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script> 
+</div>
+
+<!-- <p>&mdash; </p> -->
+
+<!-- <div>
 <article>
     <h1>Journals</h1>
     <div>
-        <script src="https://bibbase.org/show?bib=http%3A%2F%2Fmarcocostanzo.github.io%2Fbibliography%2Fjourn.bib&jsonp=1&theme={{page.bibbase_theme}}&fullnames={{page.bibbase_fullnames}}&owner={{page.bibbase_owner}}"></script> 
+        <script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fjourn.bib&jsonp=1{{page.bibbase_opt}}""></script>  
     </div>
 </article>
 
@@ -23,7 +29,7 @@ bibbase_owner: Costanzo
 <article>
     <h1>Conferences</h1>
     <div>
-        <script src="https://bibbase.org/show?bib=http%3A%2F%2Fmarcocostanzo.github.io%2Fbibliography%2Fconf.bib&jsonp=1&theme={{page.bibbase_theme}}&fullnames={{page.bibbase_fullnames}}&owner={{page.bibbase_owner}}"></script> 
+        <script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fconf.bib&jsonp=1{{page.bibbase_opt}}""></script>  
     </div>
 </article>
-</div>
+</div> -->
