--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,11 +7,26 @@ classes: wide
 
 # theme: default dividers side simple bullets
 # fullnames: 1 #If present, author and editor names will not be abbreviated. 
-bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year&group0=year&group1=type'
+bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year'
+bibbase_token: '&token=6ba38e1e6af3e53938ad9bfa1dd32b03'
 ---
 
+{% if jekyll.environment == "production" %}
+    {% capture prod_bibbase_token %}
+    {{ bibbase_token }}
+    {% endcapture %}
+{% else %}
 <div>
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script> 
+<article>
+<h1>Running in NON production mode</h1>
+</article>
+<p>&mdash; </p> 
+</div>
+    {% assign prod_bibbase_token = "" %}
+{% endif %}
+
+<div>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}{{prod_bibbase_token}}"></script> 
 </div>
 
 <!-- <p>&mdash; </p> -->
