fix for ruby 3.0 and fix for publications page .js

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,5 +1,6 @@
 ---
-layout: bibbase_splash
+# layout: bibbase_splash
+layout: 
 permalink: /publications/
 title: "Publications"
 author_profile: false
@@ -7,8 +8,10 @@ classes: wide
 
 # theme: default dividers side simple bullets
 # fullnames: 1 #If present, author and editor names will not be abbreviated. 
-bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year'
-bibbase_token: '&token=534348d9795d9a4dd6ddf4bc4442b60b'
+# bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year'
+# bibbase_token: '&token=534348d9795d9a4dd6ddf4bc4442b60b'
+bibbase_opt: '&theme=dividers&nocache=1&fullnames=1&owner=Costanzo&groupby=type&sort=-year&showSearch=true'
+bibbase_token: ''
 ---
 
 {% if jekyll.environment == "production" %}
