--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,16 +7,13 @@ author_profile: false
 classes: wide
 
 # theme: default dividers side simple bullets
-# fullnames: 1 #If present, author and editor names will not be abbreviated. 
-# bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year'
-# bibbase_token: '&token=534348d9795d9a4dd6ddf4bc4442b60b'
-bibbase_opt: '&theme=dividers&nocache=1&fullnames=1&owner=Costanzo&groupby=type&sort=-year&showSearch=true'
-bibbase_token: ''
+bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year&showSearch=true'
+bibbase_opt_dbg: '&nocache=1'
 ---
 
 {% if jekyll.environment == "production" %}
 <div>
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}{{page.bibbase_token}}"></script> 
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script> 
 </div>
 {% else %}
 <div>
@@ -25,7 +22,7 @@ bibbase_token: ''
 </article>
 <p>&mdash; </p> 
 </div>
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script> 
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}{{page.bibbase_opt_dbg}}"></script> 
 {% endif %}
 
 <!-- <p>&mdash; </p> -->
