--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -11,20 +11,62 @@ bibbase_opt: '&theme=dividers&fullnames=1&owner=Costanzo&groupby=type&sort=-year
 bibbase_opt_dbg: '&nocache=1'
 ---
 
-<button onclick="location.href = '/';" class="btn"><i class="fa fa-home"></i> Home</button>
+<head>
+    <!-- Metadata of the Webpage -->
+    <!-- Character-set Metadata -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Viewport Metadata -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Description Metadata-->
+    <meta name="description" content="Publications of Marco Costanzo" />
+    <!-- Author Metadata -->
+    <meta name="author" content="Marco Costanzo" />
+    <!-- Keyword Metadata -->
+    <meta name="keywords"
+        content="Marco Costanzo, Friction Modeling, Limit Surface, Visual Servoing, Ph.D., RTD-A, Publications, Articles, Papers, Conference" />
+    <!-- Webpage Logo -->
+    <link rel="shortcut icon" href="/assets/img/favicon.ico" />
+    <!-- Webpage Title -->
+    <title>Publications</title>
 
-{% if jekyll.environment == "production" %}
-<div>
-    <script
-        src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script>
-</div>
-{% else %}
-<div>
-    <article>
-        <h1>Running in {{jekyll.environment}} mode</h1>
-    </article>
-    <p>&mdash; </p>
-</div>
-<script
-    src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}{{page.bibbase_opt_dbg}}"></script>
-{% endif %}
+    {% include seo.html %}
+
+    <!-- Import CSS: Main Stylesheet -->
+    <!-- <link rel="stylesheet" href="../assets/css/main.css" /> -->
+    <style>
+        #publications {
+            width: 100%;
+            margin: 1%;
+            /*max-width: 960px*/
+        }
+    </style>
+</head>
+
+<body>
+    <div style="margin:0 auto;">
+        <button onclick="location.href = '/';" class="btn"><font size="+5"><i class="fa fa-home"></i> Home</font></button>
+    </div>
+
+    <section id="publications">
+        {% if jekyll.environment == "production" %}
+        <div>
+            <script
+                src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script>
+        </div>
+        {% else %}
+        <div>
+            <article>
+                <h1>Running in {{jekyll.environment}} mode</h1>
+            </article>
+            <p>&mdash; </p>
+        </div>
+
+        <script
+            src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}{{page.bibbase_opt_dbg}}"></script>
+
+        {% endif %}
+
+    </section>
+
+</body>
