--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -44,9 +44,13 @@ bibbase_opt_dbg: '&nocache=1'
 </head>
 
 <body>
-    <div style="margin:0 auto;">
+    <!-- <div style="margin:0 auto;">
         <button onclick="location.href = '/';" class="btn"><font size="+5"><i class="fa fa-home"></i> Home</font></button>
-    </div>
+    </div> -->
+
+    <!-- <div style="margin:0 auto;"> -->
+    <a href="/" class="btn btn--primary btn--x-large"><font size="+5"><i class="fa fa-home"></i> Home</font></a>
+    <!-- </div> -->
 
     <section id="publications">
         {% if jekyll.environment == "production" %}
