fix assets repo

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -56,7 +56,7 @@ bibbase_opt_dbg: '&nocache=1'
         {% if jekyll.environment == "production" %}
         <div>
             <script
-                src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script>
+                src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fgitassets%2Fmain%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}"></script>
         </div>
         {% else %}
         <div>
@@ -67,7 +67,7 @@ bibbase_opt_dbg: '&nocache=1'
         </div>
 
         <script
-            src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fassets%2Fmaster%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}{{page.bibbase_opt_dbg}}"></script>
+            src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fmarcocostanzo%2Fgitassets%2Fmain%2Fbib%2Fbiblio.bib&jsonp=1{{page.bibbase_opt}}{{page.bibbase_opt_dbg}}"></script>
 
         {% endif %}
 
